# o2cfg

./: .gitignore  BLUEPRINT.md  CHANGELOG.md  CODEBASE.md  README.md  pyproject.toml  todo.txt
.opencode/agents/: vibe.md
docs/memory/: INDEX.md
docs/memory/archive/: 2026-07-08-minimum-test-coverage.md  2026-07-08-openai2opencode-project.md
o2cfg/: __init__.py  __main__.py  cli.py  client.py  config.py  filter.py  mapper.py  output.py  provider_name.py
references/: README.md
scripts/: bump-version.sh  validate-changelog.sh  verify_codebase_sync.sh
tests/: __init__.py  cli_test.py  client_test.py  config_test.py  conftest.py  filter_test.py  main_config_doc_test.py  main_output_test.py  main_run_basic_test.py  main_run_errors_test.py  main_run_test.py  main_test.py  mapper_test.py
